feat: refine line search ranking, direction switch UI, and route panel behavior